Extra main stuff
added more things in main

--- a/index.html
+++ b/index.html
@@ -197,7 +197,18 @@
           </div>
           <span class="Adds__price">$10<br><span class="xsmall">/month</span></span>
         </div>
+       <div class="helping blue">
+        <span>It’s <span class="green">your</span> business.<br>
+          We’re here to help it grow.</span> <button class="BtnTwo">START FREE</button>
+       </div>
+       <h2 class="green Adds__Title">Frequently Asked Questions</h2> 
+       <div class="questions">
+        <p> <span>How does the free trial work?</span><svg class="expand__btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg></p>
+        <p> <span>Can I change plans anytime?</span><svg class="expand__btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg></p>
+        <p> <span>How do I pause my Bonsai subscription?</span><svg class="expand__btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg></p>
+        <p> <span>What is your refund policy?</span><svg class="expand__btn" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg></p>
         
+       </div>
     </main>
         <script src="./main.js"></script>
   </body>
